gfx/webrender_bindings/RenderCompositor.h
@@ -136,6 +136,10 @@ class RenderCompositor {
                           const wr::CompositorSurfaceTransform& aTransform,
                           wr::DeviceIntRect aClipRect,
                           wr::ImageRendering aImageRendering) {}
+  // Called in the middle of a frame after all surfaces have been added but
+  // before tiles are updated to signal that early compositing can start
+  virtual void StartCompositing(const wr::DeviceIntRect* aDirtyRects,
+                                size_t aNumDirtyRects) {}
   virtual void EnableNativeCompositor(bool aEnable) {}
   virtual void DeInit() {}
   virtual CompositorCapabilities GetCompositorCapabilities() = 0;
